# claude-code-config

./: .coderabbit.yaml  .gitignore  .markdownlint.yaml  .pr_agent.toml  .pre-commit-config.yaml  AI_REVIEW.md  CLAUDE.md  CLAUDE.md.example  CODERABBITAI.md  LICENSE  README.md  pyproject.toml  settings.json  statusline.sh  tox.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
agents/: 00-base-rules.md  api-documenter.md  bash-expert.md  code-reviewer.md  codebase-refactor-analyst.md  debugger.md  docker-expert.md  docs-fetcher.md  frontend-expert.md  general-purpose.md  git-expert.md  github-expert.md  go-expert.md  graphiti-memory-manager.md  java-expert.md  jenkins-expert.md  kubernetes-expert.md  python-expert.md  technical-documentation-writer.md  test-automator.md  test-runner.md
commands/: analyze-project.md  ask-review-db.md  code-review.md  github-ai-review-handler.md  github-coderabbitai-review-handler.md  github-pr-review.md  github-qodo-review-handler.md  github-release.md  github-review-handler.md
docs/: architecture.html  architecture.md  automation-and-ci.html  automation-and-ci.md  cli-and-interface-reference.html  cli-and-interface-reference.md  coderabbit-cli-reference.html  coderabbit-cli-reference.md  daily-workflow.html  daily-workflow.md  data-formats-and-schema.html  data-formats-and-schema.md  database-cli-reference.html  database-cli-reference.md  development-environment.html  development-environment.md  extending-agents-rules-and-plugins.html  extending-agents-rules-and-plugins.md  first-run-checks.html  first-run-checks.md  hooks-and-guardrails.html  hooks-and-guardrails.md  index.html  installation.html  installation.md  license.html  license.md  llms-full.txt  llms.txt  maintaining-release-and-versioning.html  maintaining-release-and-versioning.md  mcp-usage.html  mcp-usage.md  multi-agent-acpx-guide.html  multi-agent-acpx-guide.md  orchestrator-rules.html  orchestrator-rules.md  overview.html  (+30 more)
(+185 files in other folders)
